examples/cpp/failing/positional_argument_in_initializer_list/ExpectedIdeally.c
my_struct_t instance = {
<<<<<<< LEFT
    "hello",
    "merhaba",
||||||| BASE
    "hello"
=======
   "hello",
   "salut",
>>>>>>> RIGHT
};
